# pomodoro_cli

./: pyproject.toml
src/pomodoro_cli/: cli.py  pomodoro.py
