[project]
name = "pomodoro-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Nagul75",email = "nagulk697@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "pomodoro_cli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
