[project]
name = "pomodoro-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Nagul75",email = "nagulk697@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer (>=0.24.0,<0.25.0)",
    "rich (>=14.3.2,<15.0.0)",
    "plyer (>=2.1.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pomodoro_cli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
